Fix markup of the README.
FossilOrigin-Name: 9464c7079be7fc8b217bcf76f9735159a94952c78a2fc027c5d8aa2ed5dc5ef2

--- a/README.adoc
+++ b/README.adoc
@@ -1,5 +1,6 @@
-Sin Forth
+= Sin Forth
 :author: Marcos Cruz (programandala.net)
+:revdate: 2020-12-06
 
 Project: A Forth cross compiler written in Forth with Gforth, to
 create machine code programs for the ZX Spectrum and compatible
