--- a/TO-DO.adoc
+++ b/TO-DO.adoc
@@ -6,3 +6,4 @@
 
 - Update the cross-references to the old `assembler` vocabulary in the
   documentation of the assembler.
+- Update non-standard throw codes 22 in the assembler.
