Improve and homogenize the source file headers. Update change log and TO-DO.
FossilOrigin-Name: 74a9992a47fc73d77e0a0c57f911140088c86465a53222a8a3c6fa6a1e4ed9b8

--- a/TO-DO.adoc
+++ b/TO-DO.adoc
@@ -7,3 +7,4 @@
 - Update the cross-references to the old `assembler` vocabulary in the
   documentation of the assembler.
 - Update non-standard throw codes 22 in the assembler.
+- Update the documentation of the assembler.
