Fix the search order in the data stack module.
FossilOrigin-Name: bbb8d97b9c8a7b9fc7c1ff921b2d258a1e90e6d9694448c0297ff0cfb35165ad

--- a/TO-DO.adoc
+++ b/TO-DO.adoc
@@ -8,3 +8,9 @@
   documentation of the assembler.
 - Update non-standard throw codes 22 in the assembler.
 - Update the documentation of the assembler.
+
+== 2020-12-07
+
+- Fix: The `@` in `memory> @ constant sp0` in <data_stack.fs> is the
+  host `@`, but it's searched first in the target word list. This will
+  fail after defining a target `@`.
