--- a/TO-DO.adoc
+++ b/TO-DO.adoc
@@ -14,4 +14,4 @@
 - Fix: The `@` in `memory> @ constant sp0` in <data_stack.fs> is the
   host `@`, but it's searched first in the target word list. This will
   fail after defining a target `@`.
-- Improve the handling of word lists.  
+- Fix `constant` and `variable`.  
