--- a/TO-DO.adoc
+++ b/TO-DO.adoc
@@ -8,3 +8,7 @@
   documentation of the assembler.
 - Update non-standard throw codes 22 in the assembler.
 - Update the documentation of the assembler.
+
+== 2020-12-07
+
+- Improve `;` to convert the previous Z80 call to a jump.
