Make tail call optimization in `;`.
FossilOrigin-Name: f09c7c7d6b66f734851e7c20ab45530c2a85c41e6ce20337e36588be7fcccfff

--- a/TO-DO.adoc
+++ b/TO-DO.adoc
@@ -11,4 +11,11 @@
 
 == 2020-12-07
 
-- Improve `;` to convert the previous Z80 call to a jump.
+- Move `tail-call?` and similar private words to a new word list, e.g.
+  `sin-tools-wordlist`, accesible in a `sin-definitions` context but
+  not in a `target-definitions` context. Or move the public words from
+  `sin-wordlist` to `compiler-wordlist`. For example, also `memory`,
+  `t-,`, `initial-target` etc., should not be accesible during the
+  compilation of the target, just in case.
+- Preserve the current wordlist and search order in the included
+  modules.
