--- a/TO-DO.adoc
+++ b/TO-DO.adoc
@@ -19,3 +19,7 @@
   compilation of the target, just in case.
 - Preserve the current wordlist and search order in the included
   modules.
+- Create a library. Move the target Forth definitions to individual
+  files, even the data stack routines.
+- Make the stacks size configurable.
+- Make the data stack growing direction configurable.
