--- a/TO-DO.adoc
+++ b/TO-DO.adoc
@@ -21,3 +21,4 @@
 - Make the data stack growing direction configurable.
 - Add number and string compiling words, e.g. `l,`, `c,`, `d,` or `2,`
   `s,`. Other names: `lit,`, `2lit,`, `clit,`, `str,`...
+- Make verbosity configurable.  
