--- a/TO-DO.adoc
+++ b/TO-DO.adoc
@@ -19,6 +19,7 @@
   compilation of the target, just in case.
 - Make the stacks size configurable.
 - Make the data stack growing direction configurable.
-- Add number and string compiling words, e.g. `l,`, `c,`, `d,` or `2,`
-  `s,`. Other names: `lit,`, `2lit,`, `clit,`, `str,`...
+- Add `literal`, `2literal`, `cliteral`, `xliteral`, `sliteral`.
 - Make verbosity configurable.  
+- Add a compiler command to save the binary code.
+- Add a compiler command to create a BASIC loader.
