--- a/TO-DO.adoc
+++ b/TO-DO.adoc
@@ -23,3 +23,5 @@
 - Make verbosity configurable.  
 - Add a compiler command to save the binary code.
 - Add a compiler command to create a BASIC loader.
+- Add a compiler `'` to get the target compilation address of a word
+  defined by the compiler's `:`.
