Add missing replacement to `>z80-label`.
FossilOrigin-Name: 3187ba37aa40fa7c8bfbc38276a1bacd059d7922588e7c0bf692bf6cce917a00

--- a/TO-DO.adoc
+++ b/TO-DO.adoc
@@ -32,4 +32,6 @@
 
 == 2020-12-09
 
-Make `memory>` use the `dp` target variable.
+- Make `memory>` use the `dp` target variable.
+- Improve `>z80-label` to replace "-" with "_" or "minus" depending on
+  the name.
