Create the data stack at the start of the target program. So far it was created at the default value of `origin`. Also create the corresponding z80dasm block definition.
FossilOrigin-Name: a4c3a2f05d3aff0782fc42ad6c2397b811b675e6d9e48b76f5bb7443e3a72f1d

--- a/TO-DO.adoc
+++ b/TO-DO.adoc
@@ -35,3 +35,4 @@
 - Make `memory>` use the `dp` target variable.
 - Improve `>z80-label` to replace "-" with "_" or "minus" depending on
   the name.
+- Let `data-stack` be used anywhere.  
