--- a/TO-DO.adoc
+++ b/TO-DO.adoc
@@ -42,9 +42,8 @@
 - Use the _dea_ notation, taken from the lina Forth system.
 - Mark the stack comments of compiler words, to make it clear it's the
   Gforth's stack, not the target stack.
-- Rename `header`, which exists in Gforth, in order to make the search
-  order changing unnecessary in compiler definitions. But `'` is in the
-  same case. Perhaps just simplify the search order changes, e.g. by
+- Rename `'`?
+- Simplify the search order changes, e.g. by
   `compiler{`, `target{`, `host{`  and `}`;
   `{compiler`, `{target`, `{host`  and `}`;
   `<<compiler`, `<<target`, `<<host`  and `>>`;
