--- a/TO-DO.adoc
+++ b/TO-DO.adoc
@@ -1,6 +1,6 @@
 = Sin Forth to-do list
 :author: Marcos Cruz (programandala.net)
-:revdate: 2020-12-10
+:revdate: 2020-12-11
 
 == 2020-12-06
 
@@ -35,10 +35,6 @@
 
 == 2020-12-10
 
-- Fix: in <Makefile> `bin2tap` needs the execution address, which
-  depends on the length of the code. Solution: Create TAP files from
-  the BASIC loader (with zmakebas) and from the binary file (with
-  bin2code). Then concatenate them.
 - Use the _dea_ notation, taken from the lina Forth system.
 - Mark the stack comments of compiler words, to make it clear it's the
   Gforth's stack, not the target stack.
@@ -52,3 +48,8 @@
   `[compiler`, `[target`, `[host`  and `]`;
   `c[`, `t[`, `h[`  and `]`;
   `[compiler]`, `[target]`, `[host]`  and `[previous]`...
+
+== 2020-12-11
+
+- Extract the code start addresses from the source and pass it to
+  `z80dasm` in <Makefile>.
