--- a/TO-DO.adoc
+++ b/TO-DO.adoc
@@ -1,6 +1,6 @@
 = Sin Forth to-do list
 :author: Marcos Cruz (programandala.net)
-:revdate: 2020-12-11
+:revdate: 2020-12-24
 
 == 2020-12-06
 
@@ -44,3 +44,7 @@
   `z80dasm` in <Makefile>.
 - Use shorter names for `literal`, `2literal`, `cliteral`, `xliteral`,
   `sliteral`.
+
+== 2020-12-24
+
+- Faster `dup`.
