--- a/TO-DO.adoc
+++ b/TO-DO.adoc
@@ -65,3 +65,8 @@
 == 2020-12-26
 
 - Make `cr` a deferred word.
+- Add a rule to build any individual test by its basename.
+- Move the assembler words to a word list, in order to set it above
+  `forth-wordlist` in the target search order, and make some
+  `compiler{` unnecesary, now used to prevent `l` and other assembler
+  words from being found in the host system first. See `step`.
