--- a/README.adoc
+++ b/README.adoc
@@ -1,6 +1,6 @@
 = Sin Forth
 :author: Marcos Cruz (programandala.net)
-:revdate: 2020-12-24
+:revdate: 2023-04-05
 
 // Description {{{1
 == Description
@@ -18,12 +18,6 @@ Spectrum Next.
 // end::description[]
 
 Author's website: <http://programandala.net>.
-
-// Repository {{{1
-== Repository
-
-- http://fossil.programandala.net/sin_forth[Fossil repository]
-- http://github.com/programandala.net/sin-forth[GitHub mirror]
 
 // Installation {{{1
 == Installation
@@ -70,3 +64,16 @@ Foundation Library].
 ``tmp``       ::  Temporary files created by ``make``
 
 // end::tree[]
+
+// History of the repository {{{1
+== History of the repository
+
+- 2018-08-19: A Git repository was created from the development
+  backups in order to resume the development.
+- 2020-12-06: The Git repository was converted to
+  http://fossil-scm.org[Fossil].
+- 2020-12-18: A http://github.com/programandala.net/sin-forth[GitHub
+  mirror] was configured in the Fossil repository.
+- 2023-04-05: The repository was converted to
+  http://mercurial-scm.org[Mercurial], enabling a better interaction
+  with GitHub.
