--- a/TO-DO.adoc
+++ b/TO-DO.adoc
@@ -1,8 +1,8 @@
 = Sin Forth to-do list
 :author: Marcos Cruz (programandala.net)
-:revdate: 2023-04-25
+:revdate: 2023-04-26
 
-// Last modified: 20230425T1008+0200.
+// Last modified: 20230426T0722+0200.
 
 // This file is part of Sin Forth
 // by Marcos Cruz (programandala.net), 2010/2023.
@@ -73,9 +73,7 @@
 
 == 2023-04-24
 
-- Fix compilation of <src/test/test_dot.fs>.
 - Fix compilation of <src/test/test_flow.fs>.
-- Fix execution of <src/test/test_move.fs>.
 
 == 2023-04-25
 
@@ -95,3 +93,5 @@ The source of that example is the following:
 ----
 1 literal if
 ----
+
+- Fix execution of <src/test/test_dot.fs>.
