--- a/TO-DO.adoc
+++ b/TO-DO.adoc
@@ -2,7 +2,7 @@
 :author: Marcos Cruz (programandala.net)
 :revdate: 2023-04-26
 
-// Last modified: 20230426T1308+0200.
+// Last modified: 20230426T1736+0200.
 
 // This file is part of Sin Forth
 // by Marcos Cruz (programandala.net), 2010/2023.
@@ -33,7 +33,6 @@
 
 == 2020-12-09
 
-- Make `memory>` use the `dp` target variable.
 - Improve `>z80-label` to replace "-" with "_" or "minus" depending on
   the name.
 
@@ -91,3 +90,31 @@ The source of that example is the following:
 ----
 
 - Fix execution of <src/test/test_dot.fs>.
+
+== 2023-04-26
+
+- Replace library `here` and `dp` (currently useless both of them) and
+  compiler `memory>` with a shared value, usable by the program during
+  the compilation, therefore stored in target `memory`.
+  `begin-program` or `end-program` must reserve space for the value,
+  which must be relocatable, or similar to Forth `user` variables.
+  Then write proper target versions of `here` and `allot`.
+- Create the target word names in a specific word list?
+- Add alternative to `literal` to pass values in registers instead of
+  the stack, e.g. `'A' >a emit-a`, or just add the additional entry
+  points and use assembly: `'A' a ld#, emit-a`.
+- Remove the end label from dz80asm data blocks, which, in the
+  disassembled cod, happens to replace a following label with the same
+  value.
+- Move `compiler-wordlist` before `assembler-wordlist` in
+  `compiler-order` and `target-order`?
+- Add pronounciation to word definitions.
+- Move `<mark` and similar words from the assembler to their own
+  library files.
+- Write `do`.
+- Remove unnecesary `compiler{` and `assembler{` in library modules.
+- Add `cell` and use it instead of `2` (for example in `>mark`.
+- Find a solution to compile numbers and strings without `literal`,
+  `sliteral`, etc. For example, a custom outer interpreter.
+- Remove `begin-program` and `end-program`: do their tasks in the
+  compiler.
