--- a/TO-DO.adoc
+++ b/TO-DO.adoc
@@ -1,8 +1,8 @@
 = Sin Forth to-do list
 :author: Marcos Cruz (programandala.net)
-:revdate: 2023-04-29
+:revdate: 2023-04-30
 
-// Last modified: 20230429T1450+0200.
+// Last modified: 20230430T0749+0200.
 
 // This file is part of Sin Forth
 // by Marcos Cruz (programandala.net), 2010/2023.
@@ -117,3 +117,14 @@ The source of that example is the following:
 - Document the target effect of `;` in library modules: `ret`.
 - Add `s"` to parse and compile strings.
 - Add words to parse and compile numbers, e.g. `h#`, `d#`, `b#`, `o#`.
+
+== 2023-04-30
+
+- Add a pictured numeric output buffer.
+- Factor `does> (dfa) @ h ldp#, push-hl` from words created by
+  `creator`.
+- Homogenize the documentation of compiler library words: "create a
+  definition" -> "create a compiler definition"; "when _name_ is
+  subsequently executed, [it compiles]". See `create`, `buffer:`,
+  `variable`, etc.
+
